tests/paczka1/fuzzy1/94883120.err
Error in line 7: pl8b S133 53,6
Error in line 10: FlMr2r A989 0,9
Error in line 13: d9wmvs A989 71,2
Error in line 19: 7arWd9 A989 59,5
Error in line 20: d9wmvs A644 26,0
Error in line 31: d9wmvs S133 76,2
Error in line 33: FlMr2r S133 26,1
